fix(shared) Use function `Beans.collectIdsAsSet(): Set` when possible, instead of collectIds(): List